--- a/SQL Flask/static/CSS/style.css
+++ b/SQL Flask/static/CSS/style.css
@@ -4,10 +4,10 @@
     box-sizing: border-box;
 }
 .header {
-    padding: 60px;
-    background-image: url('img.jpg');
+    
+    padding: 0px;
     color: white;
-    font-size: 30px;
+    font-size: 40px;
 }
 
 .make{
@@ -73,4 +73,57 @@ input[type = submit]{
     display: flex;
     border: 2px solid black;
     background-color: black;
+}
+
+.product{
+
+    border: 2px solid white;
+    width: 80%;
+    box-shadow: 0px 15px 15px 0;
+    border-width: 30px;
+    padding: 50px;
+    text-align: justify;
+    margin-left: 8%;
+    
+}
+
+.img{
+
+    float: left;
+    width: 500px;
+}
+.title{
+
+    line-height: 50px;
+    text-align: center;
+}
+
+.message{
+    padding: 30px;
+    text-align: center;
+    margin-top: 7%;
+    border: 1px solid black;
+    width: 90%;
+    margin-left: 5%;
+}
+.rest{
+    padding: 30px;
+    margin-top: 2%;
+    border: 1px solid black;
+    width: 90%;
+    height: auto;
+    margin-left: 5%;
+    line-height: 20px;
+}
+
+input[type = button]{
+
+    position: fixed;
+    top: 80%;
+    left: 90%;
+    font-size: 60px;
+    border-radius: 50%;
+    width: 70px;
+    color: white;
+    background-color: green;
 }
