--- a/First Project/static/CSS/style.css
+++ b/First Project/static/CSS/style.css
@@ -60,6 +60,42 @@ input[type = submit]:hover{
     color:dimgrey;
 }
 
+.rool{
+    border: 1px solid black;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    border: none;
+}
+
+.rool_1{
+    border: 1px solid black;
+    width: 100px;
+    height: 500px;
+    border: none;
+    margin-top: 1px;
+    padding: 13px;
+    text-align: center;
+}
+
+.rool_c_1{
+    border: 1px solid black;
+    width: 75px;
+    height: 75px;
+    border-radius: 15px;
+    background-color: ivory;
+    text-align: center;
+}
+
+.rool_c_2{
+    border: 1px solid black;
+    width: 75px;
+    height: 75px;
+    margin-top: 300px;
+    border-radius: 15px;
+    background-color: ivory; 
+}
+
 .game{
     border: 4px solid burlywood;
     width: 500px;
@@ -114,7 +150,6 @@ input[type = submit]:hover{
     margin: 0;
     padding: 0;
     background-color: yellow;
-
 }
 
 .b_3_4 ,.b_2_3{
@@ -161,13 +196,14 @@ input[type = submit]:hover{
 
 .b_c_1,.b_c_2,.b_c_3,.b_c_4{
     border: 2px inset white;
-    width: 30px;
+    width: 33px;
     height: 30px;
     border-radius: 50px;
     margin: 7.5%;
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 100000;
 }
 
 .b_1_2_c{
@@ -218,32 +254,32 @@ input[type = submit]:hover{
 
 .btn_1{
     border: 2px outset white;
-    width: 30px;
-    height: 30px;
+    width: 27px;
+    height: 27px;
     border-radius: 50px;
     background-color: red;
 }
 
 .btn_2{
     border: 2px outset white;
-    width: 30px;
-    height: 30px;
+    width: 27px;
+    height: 27px;
     border-radius: 50px;
     background-color: rgb(56, 56, 240);
 }
 
 .btn_3{
     border: 2px outset white;
-    width: 30px;
-    height: 30px;
+    width: 27px;
+    height: 27px;
     border-radius: 50px;
     background-color: green
 }
 
 .btn_4{
     border: 2px outset white;
-    width: 30px;
-    height: 30px;
+    width: 27px;
+    height: 27px;
     border-radius: 50px;
     background-color: yellow;
 }
