--- a/First Project/templates/basic.html
+++ b/First Project/templates/basic.html
@@ -7,6 +7,6 @@
 <body>
     {% block content%}
     {% endblock content%}
-    <script src="{{url_for('static' , filename ='JS/script.js')}}"></script>
+    <script src="{{url_for('static' , filename ='JS/move.js')}}"></script>
 </body>
 </html>
