--- a/First Project/templates/game.html
+++ b/First Project/templates/game.html
@@ -18,18 +18,19 @@
     </audio>
 </div>
 <div class="rool" id="rool">
+    <input type="image" class="rool_c_1" id="rooler" src="static/images/dice-0.png">
     <div class="rool_1">
-        <img src="static/images/dice-0.png" class="rool_c_1" id="rool_r"><button id="rool_r_1">ROOL</button>
-        <img src="static/images/dice-0.png" class="rool_c_2" id="rool_g"><button id="rool_g_1">ROOL</button>
+        <div id="rool_move_1"></div>
+        <div id="rool_move_4"></div>
     </div>
     <div class="game">
         <div class="border" id="border">
-            <div class="b_1" id="b">
+            <div class="b_1" id="b_r">
                 <div class="b_c">
-                    <div class="b_c_1"><button class="btn_1" id="btn_r_1">&#9733;</button></div>
-                    <div class="b_c_2"><button class="btn_1" id="btn_r_2">&#9733;</button></div>
-                    <div class="b_c_3"><button class="btn_1" id="btn_r_3">&#9733;</button></div>
-                    <div class="b_c_4"><button class="btn_1" id="btn_r_4">&#9733;</button></div>
+                    <div class="b_c_1"><button onclick="move('r',1 ,x)" class="btn_1" id="btn_r_1">&#9733;</button></div>
+                    <div class="b_c_2"><button onclick="move('r',2 ,x)" class="btn_1" id="btn_r_2">&#9733;</button></div>
+                    <div class="b_c_3"><button onclick="move('r',3 ,x)" class="btn_1" id="btn_r_3">&#9733;</button></div>
+                    <div class="b_c_4"><button onclick="move('r',4, x)" class="btn_1" id="btn_r_4">&#9733;</button></div>
                 </div>
             </div>
             <div class="b_1_2">
@@ -55,12 +56,12 @@
                 <div class="b_1_2_c" style="background-color:rgb(56, 56, 240);"></div>
                 <div class="b_1_2_c" id="p_20"></div>
             </div>
-            <div class="b_2" id="b_1">
+            <div class="b_2" id="b_b">
                 <div class="b_c">
-                    <div class="b_c_1"><button class="btn_2" id="btn_b_1">&#10057;</button></div>
-                    <div class="b_c_2"><button class="btn_2" id="btn_b_2">&#10057;</button></div>
-                    <div class="b_c_3"><button class="btn_2" id="btn_b_3">&#10057;</button></div>
-                    <div class="b_c_4"><button class="btn_2" id="btn_b_4">&#10057;</button></div>
+                    <div class="b_c_1"><button onclick="move('b',1 ,x)" class="btn_2" id="btn_b_1">&#10057;</button></div>
+                    <div class="b_c_2"><button onclick="move('b',2 ,x)" class="btn_2" id="btn_b_2">&#10057;</button></div>
+                    <div class="b_c_3"><button onclick="move('b',3 ,x)" class="btn_2" id="btn_b_3">&#10057;</button></div>
+                    <div class="b_c_4"><button onclick="move('b',4 ,x)" class="btn_2" id="btn_b_4">&#10057;</button></div>
                 </div>
             </div>
             <div class="b_2_3">
@@ -114,12 +115,12 @@
                 <div class="b_3_4_c" id="p_30" style="background-color : yellow"></div>
                 <div class="b_3_4_c" id="p_29"></div>
             </div>
-            <div class="b_3" id="b">
+            <div class="b_3" id="b_g">
                 <div class="b_c">
-                    <div class="b_c_1"><button class="btn_3" id="btn_g_1">&#10050;</button></div>
-                    <div class="b_c_2"><button class="btn_3" id="btn_g_2">&#10050;</button></div>
-                    <div class="b_c_3"><button class="btn_3" id="btn_g_3">&#10050;</button></div>
-                    <div class="b_c_4"><button class="btn_3" id="btn_g_4">&#10050;</button></div>
+                    <div class="b_c_1"><button onclick="move('g',1 ,x)" class="btn_3" id="btn_g_1">&#10050;</button></div>
+                    <div class="b_c_2"><button onclick="move('g',2 ,x)" class="btn_3" id="btn_g_2">&#10050;</button></div>
+                    <div class="b_c_3"><button onclick="move('g',3 ,x)" class="btn_3" id="btn_g_3">&#10050;</button></div>
+                    <div class="b_c_4"><button onclick="move('g',4 ,x)" class="btn_3" id="btn_g_4">&#10050;</button></div>
                 </div>
             </div>
             <div class="b_4_5">
@@ -145,19 +146,19 @@
                 <div class="b_4_5_c" id="p_43" style="color: green;font-size: 30px;">&#8593;</div>
                 <div class="b_4_5_c" id="p_42"></div>
             </div>
-            <div class="b_4" id="b">
+            <div class="b_4" id="b_y">
                 <div class="b_c">
-                    <div class="b_c_1"><button class="btn_4" id="btn_y_1">&#934;</button></div>
-                    <div class="b_c_2"><button class="btn_4" id="btn_y_2">&#934;</button></div>
-                    <div class="b_c_3"><button class="btn_4" id="btn_y_3">&#934;</button></div>
-                    <div class="b_c_4"><button class="btn_4" id="btn_y_4">&#934;</button></div>
+                    <div class="b_c_1"><button onclick="move('y',1 ,x)" class="btn_4" id="btn_y_1">&#934;</button></div>
+                    <div class="b_c_2"><button onclick="move('y',2 ,x)" class="btn_4" id="btn_y_2">&#934;</button></div>
+                    <div class="b_c_3"><button onclick="move('y',3 ,x)" class="btn_4" id="btn_y_3">&#934;</button></div>
+                    <div class="b_c_4"><button onclick="move('y',4 ,x)" class="btn_4" id="btn_y_4">&#934;</button></div>
                 </div>
             </div>
         </div>
     </div>
     <div class="rool_1">
-        <img src="static/images/dice-0.png" class="rool_c_1" id="rool_b"><button id="rool_b_1">ROOL</button>
-        <img src="static/images/dice-0.png" class="rool_c_2" id="rool_y"><button id="rool_y_1">ROOL</button>
+        <div id="rool_move_2"></div>
+        <div id="rool_move_3"></div>
     </div>
 </div>
 {% endblock content%}
