--- a/First Project/templates/game.html
+++ b/First Project/templates/game.html
@@ -27,10 +27,10 @@
         <div class="border" id="border">
             <div class="b_1" id="b_r">
                 <div class="b_c">
-                    <div class="b_c_1"><button onclick="move('r',1 ,x)" class="btn_1" id="btn_r_1">&#9733;</button></div>
-                    <div class="b_c_2"><button onclick="move('r',2 ,x)" class="btn_1" id="btn_r_2">&#9733;</button></div>
-                    <div class="b_c_3"><button onclick="move('r',3 ,x)" class="btn_1" id="btn_r_3">&#9733;</button></div>
-                    <div class="b_c_4"><button onclick="move('r',4, x)" class="btn_1" id="btn_r_4">&#9733;</button></div>
+                    <div class="b_c_1" id="b_r_1"><button onclick="move('r',1 ,x)" class="btn_1" id="btn_r_1">&#9733;</button></div>
+                    <div class="b_c_2" id="b_r_2"><button onclick="move('r',2 ,x)" class="btn_1" id="btn_r_2">&#9733;</button></div>
+                    <div class="b_c_3" id="b_r_3"><button onclick="move('r',3 ,x)" class="btn_1" id="btn_r_3">&#9733;</button></div>
+                    <div class="b_c_4" id="b_r_4"><button onclick="move('r',4, x)" class="btn_1" id="btn_r_4">&#9733;</button></div>
                 </div>
             </div>
             <div class="b_1_2">
@@ -58,10 +58,10 @@
             </div>
             <div class="b_2" id="b_b">
                 <div class="b_c">
-                    <div class="b_c_1"><button onclick="move('b',1 ,x)" class="btn_2" id="btn_b_1">&#10057;</button></div>
-                    <div class="b_c_2"><button onclick="move('b',2 ,x)" class="btn_2" id="btn_b_2">&#10057;</button></div>
-                    <div class="b_c_3"><button onclick="move('b',3 ,x)" class="btn_2" id="btn_b_3">&#10057;</button></div>
-                    <div class="b_c_4"><button onclick="move('b',4 ,x)" class="btn_2" id="btn_b_4">&#10057;</button></div>
+                    <div class="b_c_1" id="b_b_1"><button onclick="move('b',1 ,x)" class="btn_2" id="btn_b_1">&#10057;</button></div>
+                    <div class="b_c_2" id="b_b_2"><button onclick="move('b',2 ,x)" class="btn_2" id="btn_b_2">&#10057;</button></div>
+                    <div class="b_c_3" id="b_b_3"><button onclick="move('b',3 ,x)" class="btn_2" id="btn_b_3">&#10057;</button></div>
+                    <div class="b_c_4" id="b_b_4"><button onclick="move('b',4 ,x)" class="btn_2" id="btn_b_4">&#10057;</button></div>
                 </div>
             </div>
             <div class="b_2_3">
@@ -73,12 +73,12 @@
                 <div class="b_2_3_c" id="p_4"></div>
                 <div class="b_2_3_c" id="p_5"></div>
                 <div class="b_2_3_c" id="p_58" style="color: red; font-size: 30px;">&#8594;</div>
-                <div class="b_2_3_c" id="p_r_1" style="background-color: red;"></div>
-                <div class="b_2_3_c" id="p_r_2" style="background-color: red;"></div>
-                <div class="b_2_3_c" id="p_r_3" style="background-color: red;"></div>
-                <div class="b_2_3_c" id="p_r_4" style="background-color: red;"></div>
-                <div class="b_2_3_c" id="p_r_5" style="background-color: red;"></div>
-                <div class="b_2_3_c" id="p_r_6" style="background-color: red;"></div>
+                <div class="b_2_3_c" id="p_100" style="background-color: red;"></div>
+                <div class="b_2_3_c" id="p_101" style="background-color: red;"></div>
+                <div class="b_2_3_c" id="p_102" style="background-color: red;"></div>
+                <div class="b_2_3_c" id="p_103" style="background-color: red;"></div>
+                <div class="b_2_3_c" id="p_104" style="background-color: red;"></div>
+                <div class="b_2_3_c" id="p_105" style="background-color: red;"></div>
                 <div class="b_2_3_c" id="p_57"></div>
                 <div class="b_2_3_c" id="p_56"></div>
                 <div class="b_2_3_c" style="background-color: rgb(173, 173, 173);"><div id="p_55" class="no_touch"></div></div>
@@ -90,7 +90,7 @@
             <div class="b_center">
                 <div class="triangle-down"></div>
                 <div class="triangle-right"></div>
-                <div id="p_r_7" class="triangle-up"></div>
+                <div class="triangle-up"></div>
             </div>
             <div class="b_3_4">
                 <div class="b_3_4_c" id="p_21"></div>
@@ -100,12 +100,12 @@
                 <div class="b_3_4_c" style="background-color: rgb(173, 173, 173);"><div id="p_25" class="no_touch"></div></div>
                 <div class="b_3_4_c" id="p_26"></div>
                 <div class="b_3_4_c" id="p_27"></div>
-                <div class="b_3_4_c" style="background-color : yellow"></div>
-                <div class="b_3_4_c" style="background-color : yellow"></div>
-                <div class="b_3_4_c" style="background-color : yellow"></div>
-                <div class="b_3_4_c" style="background-color : yellow"></div>
-                <div class="b_3_4_c" style="background-color : yellow"></div>
-                <div class="b_3_4_c" style="background-color : yellow"></div>
+                <div class="b_3_4_c" id="p_305" style="background-color : yellow"></div>
+                <div class="b_3_4_c" id="p_304" style="background-color : yellow"></div>
+                <div class="b_3_4_c" id="p_303" style="background-color : yellow"></div>
+                <div class="b_3_4_c" id="p_302" style="background-color : yellow"></div>
+                <div class="b_3_4_c" id="p_301" style="background-color : yellow"></div>
+                <div class="b_3_4_c" id="p_300" style="background-color : yellow"></div>
                 <div class="b_3_4_c" id="p_28" style="color: rgb(196, 196, 0); font-size: 30px;">&#8592;</div>
                 <div class="b_3_4_c" id="p_35"></div>
                 <div class="b_3_4_c" id="p_34"></div>
@@ -117,10 +117,10 @@
             </div>
             <div class="b_3" id="b_g">
                 <div class="b_c">
-                    <div class="b_c_1"><button onclick="move('g',1 ,x)" class="btn_3" id="btn_g_1">&#10050;</button></div>
-                    <div class="b_c_2"><button onclick="move('g',2 ,x)" class="btn_3" id="btn_g_2">&#10050;</button></div>
-                    <div class="b_c_3"><button onclick="move('g',3 ,x)" class="btn_3" id="btn_g_3">&#10050;</button></div>
-                    <div class="b_c_4"><button onclick="move('g',4 ,x)" class="btn_3" id="btn_g_4">&#10050;</button></div>
+                    <div class="b_c_1" id="b_g_1"><button onclick="move('g',1 ,x)" class="btn_3" id="btn_g_1">&#10050;</button></div>
+                    <div class="b_c_2" id="b_g_2"><button onclick="move('g',2 ,x)" class="btn_3" id="btn_g_2">&#10050;</button></div>
+                    <div class="b_c_3" id="b_g_3"><button onclick="move('g',3 ,x)" class="btn_3" id="btn_g_3">&#10050;</button></div>
+                    <div class="b_c_4" id="b_g_4"><button onclick="move('g',4 ,x)" class="btn_3" id="btn_g_4">&#10050;</button></div>
                 </div>
             </div>
             <div class="b_4_5">
@@ -148,10 +148,10 @@
             </div>
             <div class="b_4" id="b_y">
                 <div class="b_c">
-                    <div class="b_c_1"><button onclick="move('y',1 ,x)" class="btn_4" id="btn_y_1">&#934;</button></div>
-                    <div class="b_c_2"><button onclick="move('y',2 ,x)" class="btn_4" id="btn_y_2">&#934;</button></div>
-                    <div class="b_c_3"><button onclick="move('y',3 ,x)" class="btn_4" id="btn_y_3">&#934;</button></div>
-                    <div class="b_c_4"><button onclick="move('y',4 ,x)" class="btn_4" id="btn_y_4">&#934;</button></div>
+                    <div class="b_c_1" id="b_y_1"><button onclick="move('y',1 ,x)" class="btn_4" id="btn_y_1">&#934;</button></div>
+                    <div class="b_c_2" id="b_y_2"><button onclick="move('y',2 ,x)" class="btn_4" id="btn_y_2">&#934;</button></div>
+                    <div class="b_c_3" id="b_y_3"><button onclick="move('y',3 ,x)" class="btn_4" id="btn_y_3">&#934;</button></div>
+                    <div class="b_c_4" id="b_y_4"><button onclick="move('y',4 ,x)" class="btn_4" id="btn_y_4">&#934;</button></div>
                 </div>
             </div>
         </div>
