--- a/Envirenement/templates/base.html
+++ b/Envirenement/templates/base.html
@@ -28,17 +28,17 @@
             </div>
             <div class="footer_useful">
                 <h6 class="footer_all">Autre</h6><br>
-                <a class="footer_info_1" href="#">Acceuil</a><br>
-                <a class="footer_info_1" href="#">A propre</a><br>
-                <a class="footer_info_1" href="#">Service</a><br>
-                <a class="footer_info_1" href="#">Contact</a><br>
+                <a class="footer_info_1" href="/">Acceuil</a><br>
+                <a class="footer_info_1" href="/about">A propre</a><br>
+                <a class="footer_info_1" href="/service">Service</a><br>
+                <a class="footer_info_1" href="/contact">Contact</a><br>
             </div>
             <div class="footer_service">
                 <h6 class="footer_all">Service</h6><br>
-                <a class="footer_info_1" href="#">Annonce</a><br>
-                <a class="footer_info_1" href="#">Departement</a><br>
-                <a class="footer_info_1" href="#">Delemitation</a><br>
-                <a class="footer_info_1" href="#">Multimedia</a><br>
+                <a class="footer_info_1" href="/service">Annonce</a><br>
+                <a class="footer_info_1" href="/service">Departement</a><br>
+                <a class="footer_info_1" href="/service">Delemitation</a><br>
+                <a class="footer_info_1" href="/">Multimedia</a><br>
             </div>
             <div class="footer_contact">
                 <h6 class="footer_all">Contact</h6><br>
