--- a/Envirenement/templates/services.html
+++ b/Envirenement/templates/services.html
@@ -6,25 +6,78 @@
 <div class="new_all">
     <div class="new_all_1">
         <div class="new_title">
-            <div class="new_logo"></div>
-            <div class="new_annon"></div>
-        </div>
-        <div class="new_focus"></div>
-        <div class="new_info">
-            <div class="new_info_left"></div>
-            <div class="new_info_right">
-                <div class="new_info_right_one"></div>
-                <div style="height: 35%;" class="new_info_right_1"></div>
-                <div class="new_info_right_1"></div>
-                <div class="new_info_right_1"></div>
-                <div class="new_info_right_1"></div>
-                <div class="new_info_right_1"></div>
-                <div class="new_info_right_1"></div>
-                <div class="new_info_right_1"></div>
-                
+            <div class="new_logo">
+                <img src="../static/images/logo/1.png" style="width: 290px; height: 400px;">
+            </div>
+            <div class="new_annon" style="z-index: -1;">
+                <div class="carousel"  data-flickity='{ "wrapAround": true, "autoPlay": true, "imagesLoaded":true }'>
+                    <div class="carousel-cell">
+                      <img class="w3-image" src="../static/images/Annonce/1.jpg" style="width: 400;height: 370px;">
+                    </div>
+                    <div class="carousel-cell">
+                      <img class="w3-image" src="../static/images/Annonce/2.jpg" style="width: 400;height: 370px; ">
+                    </div>
+                    <div class="carousel-cell">
+                      <img class="w3-image" src="../static/images/Annonce/3.jpg" style="width: 400;height: 370px; ">
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="new_footer"></div>
+        <div class="new_focus">
+            <h3>PLUS INFORMATION</h3>
+        </div>
+        <div class="new_info">
+            <div class="new_info_left">
+                <img src="../static/images/Annonce/S1.jpg" style="width: 290px; height: 140px; margin-bottom: 20px;">
+                <img src="../static/images/Annonce/S2.jpg" style="width: 290px; height: 140px; margin-bottom: 20px;">
+                <img src="../static/images/Annonce/S3.jpg" style="width: 290px; height: 140px; margin-bottom: 20px;">
+                <img src="../static/images/Annonce/S4.jpg" style="width: 290px; height: 140px; margin-bottom: 20px;">
+                <img src="../static/images/Annonce/S3.jpg" style="width: 290px; height: 140px; margin-bottom: 20px;">
+            </div>
+            <div class="new_info_right">
+                <div class="new_info_right_one" style="z-index: -1;">
+                    <div class="carousel"  data-flickity='{ "wrapAround": true, "autoPlay": true, "imagesLoaded":true }'>
+                        <div class="carousel-cell">
+                          <img class="w3-image" src="../static/images/Annonce/S1.jpg" style="width: 2200;height: 250px;">
+                        </div>
+                        <div class="carousel-cell">
+                          <img class="w3-image" src="../static/images/Annonce/S2.jpg" style="width: 200;height: 250px; ">
+                        </div>
+                        <div class="carousel-cell">
+                          <img class="w3-image" src="../static/images/Annonce/S3.jpg" style="width: 200;height: 250px; ">
+                        </div>
+                    </div>
+                </div>
+                <div style="height: 35%;" class="new_info_right_1">
+                    <img src="../static/images/logo/1.png" style="width: 266px;height: 278px;">
+                    <div class="text_annon">Nouveau Logo Departement l'eau et foret </div>
+                </div>
+                <div class="new_info_right_1">
+                    <img src="../static/images/Annonce/M1.jpg" style="width: 266px;height: 190px;">
+                    <div class="text_annon">Réunion de la Commission régionale de Tanger </div>
+                </div>
+                <div class="new_info_right_1">
+                    <img src="../static/images/Annonce/M2.jpg" style="width: 266px;height: 190px;">
+                    <div class="text_annon">Concours « Green Start-up »  </div>
+                </div>
+                <div class="new_info_right_1">
+                    <img src="../static/images/Annonce/M3.jpg" style="width: 266px;height: 190px;">
+                    <div class="text_annon">Réintroduction du Mouflons à manchettes dans la nature </div>
+                </div>
+                <div class="new_info_right_1">
+                    <img src="../static/images/Annonce/M4.jpg" style="width: 266px;height: 190px;">
+                    <div class="text_annon">Ouverture de la saison de chasse 2020-2021</div>
+                </div>
+                <div class="new_info_right_1">
+                    <img src="../static/images/Annonce/M5.jpg" style="width: 266px;height: 190px;">
+                    <div class="text_annon">Forêt d'Ain Lahouala (Salé): Travaux de sylviculture et de nettoiement des arbres morts sur pied  </div>
+                </div>
+                <div class="new_info_right_1">
+                    <img src="../static/images/Annonce/M6.jpg" style="width: 266px;height: 190px;">
+                    <div class="text_annon">DÉSERTIFICATION Célébration de la Journée internationale de lutte contre la désertification (17 juin 2020)</div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 {% endblock content %}
